# somedaex

./: .editorconfig  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/: .envrc  README.md  build_index.py  pyproject.toml  run_server.py
backend/lib/observableproxy/: __init__.py  proxy.py
backend/lib/pipeline/: __init__.py  index.py  pipeline.py
backend/lib/pipeline/http/: __init__.py  encoder.py  events.py  server.py
backend/lib/pipeline/task/: __init__.py  exceptions.py  monadic.py  niladic.py  observable.py  results.py  rowwise.py  status.py  task.py
backend/lib/task_types/: __doc__.txt  __init__.py  casefold.py  emoji.py  loadfile.py  sentiment.py
backend/scripts/: build_index.py  run_server.py
backend/somedaex/: arrow_util.py
backend/somedaex/http/: encoder.py  events.py  server.py
backend/somedaex/observableproxy/: property.py  proxy.py
backend/somedaex/pipeline/: events.py  pipeline.py
backend/somedaex/pipeline/task/: __init__.py  monadic.py  rowwise.py  status.py  task.py
backend/somedaex/task_types/: __init__.py  casefold.py  emoji.py  loadfile.py
main/: README.md  package.json  tsconfig.json
main/scripts/: esbuild.js
main/src/: main.ts  preload.ts
main/src/lib/: pipenv.ts  workspace.ts
renderer/: README.md  package.json  tsconfig.json  webpack.config.js
renderer/src/: index.html  index.ts
renderer/src/components/: App.vue  SelectColumn.vue  Separator.vue  TaskInfo.vue  TaskMenu.vue
renderer/src/lib/: backend.ts  task.ts  workspace.ts
renderer/src/style/: global.css
(+10 files in other folders)
